# yair-controller

./: .gitignore  Cargo.toml  Dockerfile  README.md  Tiltfile  docker-bake  docker-bake.hcl  drust-toolchain  justfile  release.toml  rust-toolchain.toml  rustfmt.toml
.cargo/: config.toml
.github/: dependabot.yml
.github/DEPRECATED/: automerge  ci.yml
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: audit.yml  build-push-image.yaml  ci.yml  rustfmt.yml
charts/.github/: dependabot.yml
charts/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  story.md
charts/.github/workflows/: automerge.yml  ci.yml
charts/yair-controller/: Chart.yaml  test.yaml  values.yaml
charts/yair-controller/templates/: deployment.yaml  serviceaccount.yaml
charts/yair-controller/templates/tests/: test-connection.yaml
charts/yapp-controller/: Chart.yaml  test.yaml  values.yaml
charts/yapp-controller/templates/: NOTES.txt  _helpers.tpl  configMap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  service.yaml  serviceaccount.yaml
charts/yapp-controller/templates/tests/: test-connection.yaml
config/: development.yaml  test.yaml
doc/mermaid/: mpmc.md
hack/scripts/: entrypoint.sh
src/: app.rs  lib.rs
src/controllers/: health.rs  home.rs  mod.rs
src/controllers/lib/: crdgen.rs  fixtures.rs  kubecontroller.rs  lib.rs  metrics.rs  mod.rs  telemetry.rs
src/core/: environment.rs  fixtures.rs  kubecontroller.rs  logger.rs  metrics.rs  mod.rs  telemetry.rs
tests/requests/: health.rs  home.rs  metrics.rs  mod.rs
yaml/: deployment.yaml
yaml/crd_concepts/: containerReplicator.yaml  destinationRepository.yaml  sourceRepository.yaml
yaml/doc_crds/: crd.yaml
yaml/services/collector/: collector.yaml
yaml/services/prometheus/: config.yaml
