[package]
name = "yapp"
version = "0.1.0"
authors = ["Charles Sibbald <casibbald@gmail.com>"]
edition = "2024"
default-run = "yapp-controller"
license = "Apache-2.0"
publish = false


[workspace.dependencies]
loco-rs = { version = "0.12.0", default-features = false }

[dependencies]

loco-rs = { workspace = true, features = ["cli"] }
serde = "1"
serde_json = "1"
tokio = { version = "1.33.0", default-features = false, features = [
  "rt-multi-thread",
] }
async-trait = "0.1.74"
axum = "0.7.5"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }

[[bin]]
doc = false
name = "yapp-controller"
path = "src/bin/main.rs"
required-features = []


[[bin]]
name = "tool"
path = "src/bin/tool.rs"
required-features = []

[dev-dependencies]
serial_test = "3.1.1"
rstest = "0.21.0"
loco-rs = { workspace = true, features = ["testing", "cli"] }
insta = { version = "*", features = ["redactions", "yaml", "filters"] }
